# photoqt

./: .CHANGES SO FAR.kate-swp  .gitignore  CHANGELOG  CHANGELOG~  CMakeLists.txt  CMakeLists.txt~  IMAGEFORMATS  README  README~  application.cpp  application.h  cmake_uninstall.cmake.in  fileformats.h  for_photoqt_desktop_FULL  for_photoqt_desktop_QT  globalsettings.h  globalvariables.h  graphicsview.cpp  graphicsview.h  imagemagick.cpp  imagemagick.h  main.cpp  mainwindow.cpp  mainwindow.h  photo.desktop  photo.pro  photoqt.desktop  photoqt_de.ts  resImg.qrc  resLang.qrc  setupwidgets.h  shortcuts.h  threadforthumbnails.h  windowsicons.rc  xfce_modes
CMake/: FindExiv2.cmake  FindMagick.cmake
cmake/: FindMagick.cmake
customelements/: customcheckbox.cpp  customcheckbox.h  customcombobox.cpp  customcombobox.h  customlabel.cpp  customlabel.h  customline.h  customlineedit.cpp  customlineedit.h  custompushbutton.cpp  custompushbutton.h  customradiobutton.cpp  customradiobutton.h  customscrollbar.cpp  customscrollbar.h  customslider.cpp  customslider.h  customspinbox.cpp  customspinbox.h  customtabwidget.cpp  customtabwidget.h
filterimages/: filterimagesdisplay.cpp  filterimagesdisplay.h  filterimagessetup.cpp  filterimagessetup.h
flowlayout/: flowlayout.cpp  flowlayout.h
graphics/: cropbar.cpp  cropbar.h  cropwidget.cpp  cropwidget.h  graphicsitem.cpp  graphicsitem.h  graphicsview.cpp  graphicsview.h  graphicsviewlay.cpp  graphicsviewlay.h  imagereader.cpp  imagereader.h  imagereader2.cpp  imagereader2.h
img/: flipR.xcf  icon.xcf  iconBorder.xcf  logo.xcf  rename.xcf  scale.xcf  slideshow.xcf  splash.xcf  switchoff.xcf  switchon.xcf  zoomActual.xcf  zoomIn.xcf  zoomOut.xcf
lang/: .gitignore  .gitignore~  photo_ar.qm  photo_ar.ts  photo_cs.qm  photo_cs.ts  photo_de.qm  photo_de.ts  photo_el.qm  photo_el.ts  photo_en.ts  photo_es_ES.qm  photo_es_ES.ts  photo_fr.qm  photo_fr.ts  photo_hu.qm  photo_hu.ts  photo_it.qm  photo_it.ts  photo_nb_NO.qm  photo_nb_NO.ts  photo_nn_NO.qm  photo_nn_NO.ts  photo_pl.po  photo_pl.qm  photo_pl.ts  photo_ru_RU.qm  photo_ru_RU.ts  photo_sk.qm  photo_sk.ts  photo_sr_RS.qm  photo_sr_RS.ts  photo_tr.qm  photo_tr.ts  photo_uk_UA.qm  photo_uk_UA.ts  photo_vi.qm  photo_vi.ts  photo_zh_CN.qm  photo_zh_CN.ts  (+45 more)
lang/.tx/: config
lang/translations/photo.all-strings/: photo_ar.qm  photo_de.qm  photo_el.qm  photo_uk_UA.qm  photo_zh_CN.qm
manipulate/: manipulate.cpp  manipulate.h  manipulatelabel.cpp  manipulatelabel.h
manipulation/: cropbar.cpp  cropbar.h  cropwidget.cpp  cropwidget.h  scale.cpp  scale.h
open/: opencrumbs.cpp  opencrumbs.h  openfile.cpp  openfile.h  openpixmapitem.cpp  openpixmapitem.h
settings/: settings.cpp  settings.h  settingstabexif.cpp  settingstabexif.h  settingstabexiftiles.cpp  settingstabexiftiles.h  settingstablookandfeel.cpp  settingstablookandfeel.h  settingstabother.cpp  settingstabother.h  settingstabothercontext.cpp  settingstabothercontext.h  settingstabothercontexttiles.cpp  settingstabothercontexttiles.h  settingstabotherfiletypestiles.cpp  settingstabotherfiletypestiles.h  settingstabotherlanguagetiles.cpp  settingstabotherlanguagetiles.h  settingstabshortcuts.cpp  settingstabshortcuts.h  settingstabshortcuts2.cpp  settingstabshortcuts2.h  settingstabshortcutschangecommand.cpp  settingstabshortcutschangecommand.h  settingstabshortcutskeydetect.cpp  settingstabshortcutskeydetect.h  settingstabshortcutstiles.cpp  settingstabshortcutstiles.h  settingstabthumbnail.cpp  settingstabthumbnail.h  shortcuts.h
slideshow/: slideshowbar.cpp  slideshowbar.h  slideshowsettings.cpp  slideshowsettings.h
thumbnails/: threadforthumbnails.h  thumbnailpixmapitem.cpp  thumbnailpixmapitem.h  thumbnails.cpp  thumbnails.h  thumbnailview.cpp  thumbnailview.h
wallpaper/: wallpaper.cpp  wallpaper.h
widgets/: aboutwidget.cpp  aboutwidget.h  customconfirm.cpp  customconfirm.h  detailswidget.cpp  detailswidget.h  dropdownmenu.cpp  dropdownmenu.h  dropdownmenuitem.cpp  dropdownmenuitem.h  exifwidget.cpp  exifwidget.h  filehandling.cpp  filehandling.h  mywidget.cpp  mywidget.h  quicksettings.cpp  quicksettings.h  startupwidget.cpp  startupwidget.h  wallpaper.cpp  wallpaper.h
windows/: photoqt.nsi  photoqt_full.nsi
